# OopBoidsSimuleringThreepp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  tests.cpp
.github/workflows/: ci.yml
include/: arena.cpp  arena.hpp  boid.cpp  boid.hpp  flock.cpp  flock.hpp  food.hpp  gene.hpp  mutate.hpp  pack.hpp  predator.hpp  threeppfunctions.cpp  threeppfunctions.hpp  utilityfunctions.hpp
src/: arena.cpp  boid.cpp  flock.cpp  main.cpp  pack.cpp  predator.cpp  threeppfunctions.cpp  utilityfunctions.cpp
